--- a/src/pages/LandingPage/landingPage.css
+++ b/src/pages/LandingPage/landingPage.css
@@ -12,7 +12,8 @@
   margin: 0 auto;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start; }
+  align-items: flex-start;
+  flex-wrap: wrap; }
 
 @media only screen and (max-width: 720px) {
   .image img {
